--- a/angular-reddit/src/app/app.component.html
+++ b/angular-reddit/src/app/app.component.html
@@ -17,19 +17,23 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-<form >
-  <h3 >Add a Link</h3>
-  <div>
-    <label for="title">Title:</label>
-    <input name="title" #newtitle> //Aggiunta una variabile di template
-  </div>
-  <div>
-    <label for="link">Link:</label>
-  <input name="link" #newlink> //Aggiunta una variabile di template
-  </div>
-  <button (click)="addArticle(newtitle, newlink)"> //Passiamo le variabili come parametro
-  Submit link
-  </button>
-</form>
+
+<div class="container">
+  <form class="jumbotron">
+      <h3 class="display-4">Add a Link</h3>
+      <div class="form-group">
+        <label for="title">Title:</label>
+        <input name="title" #newtitle >
+      </div>
+      <div class="form-group">
+        <label for="link">Link:</label>
+        <input name="link" #newlink class="form-control">
+      </div>
+    <button (click)="addArticle(newtitle, newlink)" class="btn btn-primary">
+      Submit link
+    </button>
+  </form>
+</div>
+
 
 
